# libkmgraph

./: AUTHORS  CMakeLists.txt  KPimMGraphConfig.cmake.in  Mainpage.dox  Messages.sh  README
autotests/: CMakeLists.txt  objectsaccountinfotests.cpp  objectscalendartests.cpp  objectscontactsgrouptests.cpp  objectscontacttests.cpp  objectseventtests.cpp  objectslocationtests.cpp  objectstasklisttests.cpp  objectstasktests.cpp  objectstaticmapurltests.cpp  servicesaccountinfotests.cpp  servicescalendartests.cpp  servicescontactstests.cpp  servicescontactstests.h  serviceslatitudetests.cpp  servicestaskstests.cpp  servicestaskstests.h
autotests/drive/: filesearchquerytest.cpp
autotests/onedrive/: filesearchquerytest.cpp
doc/api/: Doxyfile.local
examples/contacts/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
examples/staticmaps/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  debug.cpp  debug.h  libkmgraph.categories
src/blogger/: CMakeLists.txt  blog.cpp  blog.h  blogfetchjob.cpp  blogfetchjob.h  bloggerservice.cpp  bloggerservice.h  comment.cpp  comment.h  commentapprovejob.cpp  commentapprovejob.h  commentdeletecontentjob.cpp  commentdeletecontentjob.h  commentdeletejob.cpp  commentdeletejob.h  commentfetchjob.cpp  commentfetchjob.h  page.cpp  page.h  pagecreatejob.cpp  pagecreatejob.h  pagedeletejob.cpp  pagedeletejob.h  pagefetchjob.cpp  pagefetchjob.h  pagemodifyjob.cpp  pagemodifyjob.h  post.cpp  post.h  postcreatejob.cpp  postcreatejob.h  postdeletejob.cpp  postdeletejob.h  postfetchjob.cpp  postfetchjob.h  postmodifyjob.cpp  postmodifyjob.h  postpublishjob.cpp  postpublishjob.h  postsearchjob.cpp  (+1 more)
src/calendar/: CMakeLists.txt  calendar.cpp  calendar.h  calendarcreatejob.cpp  calendarcreatejob.h  calendardeletejob.cpp  calendardeletejob.h  calendarfetchjob.cpp  calendarfetchjob.h  calendarmodifyjob.cpp  calendarmodifyjob.h  calendarservice.cpp  calendarservice.h  event.cpp  event.h  eventcreatejob.cpp  eventcreatejob.h  eventdeletejob.cpp  eventdeletejob.h  eventfetchjob.cpp  eventfetchjob.h  eventmodifyjob.cpp  eventmodifyjob.h  eventmovejob.cpp  eventmovejob.h  freebusyqueryjob.cpp  freebusyqueryjob.h  reminder.cpp  reminder.h
src/contacts/: CMakeLists.txt  contact.cpp  contact.h  contactcreatejob.cpp  contactcreatejob.h  contactdeletejob.cpp  contactdeletejob.h  contactfetchjob.cpp  contactfetchjob.h  contactfetchphotojob.cpp  contactfetchphotojob.h  contactmodifyjob.cpp  contactmodifyjob.h  contactsgroup.cpp  contactsgroup.h  contactsgroupcreatejob.cpp  contactsgroupcreatejob.h  contactsgroupdeletejob.cpp  contactsgroupdeletejob.h  contactsgroupfetchjob.cpp  contactsgroupfetchjob.h  contactsgroupmodifyjob.cpp  contactsgroupmodifyjob.h  contactsservice.cpp  contactsservice.h
src/core/: CMakeLists.txt  account.cpp  account.h  authjob.cpp  authjob.h  createjob.cpp  createjob.h  deletejob.cpp  deletejob.h  fetchjob.cpp  fetchjob.h  job.cpp  job.h  job_p.h  modifyjob.cpp  modifyjob.h  object.cpp  object.h  types.h  utils.cpp  utils.h
src/core/accountinfo/: accountinfo.cpp  accountinfo.h  accountinfofetchjob.cpp  accountinfofetchjob.h
src/core/private/: newtokensfetchjob.cpp  newtokensfetchjob_p.h  queuehelper_p.h
src/core/ui/: authwidget.cpp  authwidget.h  authwidget_p.cpp  authwidget_p.h
src/drive/: CMakeLists.txt  about.cpp  about.h  aboutfetchjob.cpp  aboutfetchjob.h  app.cpp  app.h  appfetchjob.cpp  appfetchjob.h  change.cpp  change.h  changefetchjob.cpp  changefetchjob.h  childreference.cpp  childreference.h  childreferencecreatejob.cpp  childreferencecreatejob.h  childreferencedeletejob.cpp  childreferencedeletejob.h  childreferencefetchjob.cpp  childreferencefetchjob.h  driveservice.cpp  driveservice.h  file.cpp  file.h  file_p.h  fileabstractdatajob.cpp  fileabstractdatajob.h  fileabstractmodifyjob.cpp  fileabstractmodifyjob.h  fileabstractuploadjob.cpp  fileabstractuploadjob.h  filecopyjob.cpp  filecopyjob.h  filecreatejob.cpp  filecreatejob.h  filedeletejob.cpp  filedeletejob.h  filefetchcontentjob.cpp  filefetchcontentjob.h  (+42 more)
src/latitude/: CMakeLists.txt  latitude.h  latitudeservice.cpp  latitudeservice.h  location.cpp  location.h  locationcreatejob.cpp  locationcreatejob.h  locationdeletejob.cpp  locationdeletejob.h  locationfetchhistoryjob.cpp  locationfetchhistoryjob.h  locationfetchjob.cpp  locationfetchjob.h
src/onedrive/: CMakeLists.txt  about.cpp  about.h  aboutfetchjob.cpp  aboutfetchjob.h  app.cpp  app.h  appfetchjob.cpp  appfetchjob.h  change.cpp  change.h  changefetchjob.cpp  changefetchjob.h  childreference.cpp  childreference.h  childreferencecreatejob.cpp  childreferencecreatejob.h  childreferencedeletejob.cpp  childreferencedeletejob.h  childreferencefetchjob.cpp  childreferencefetchjob.h  file.cpp  file.h  file_p.h  fileabstractdatajob.cpp  fileabstractdatajob.h  fileabstractmodifyjob.cpp  fileabstractmodifyjob.h  fileabstractuploadjob.cpp  fileabstractuploadjob.h  filecopyjob.cpp  filecopyjob.h  filecreatejob.cpp  filecreatejob.h  filedeletejob.cpp  filedeletejob.h  filefetchcontentjob.cpp  filefetchcontentjob.h  filefetchjob.cpp  filefetchjob.h  (+42 more)
src/staticmaps/: CMakeLists.txt  staticmapmarker.cpp  staticmapmarker.h  staticmappath.cpp  staticmappath.h  staticmaptilefetchjob.cpp  staticmaptilefetchjob.h  staticmapurl.cpp  staticmapurl.h
src/tasks/: CMakeLists.txt  task.cpp  task.h  taskcreatejob.cpp  taskcreatejob.h  taskdeletejob.cpp  taskdeletejob.h  taskfetchjob.cpp  taskfetchjob.h  tasklist.cpp  tasklist.h  tasklistcreatejob.cpp  tasklistcreatejob.h  tasklistdeletejob.cpp  tasklistdeletejob.h  tasklistfetchjob.cpp  tasklistfetchjob.h  tasklistmodifyjob.cpp  tasklistmodifyjob.h  taskmodifyjob.cpp  taskmodifyjob.h  taskmovejob.cpp  taskmovejob.h  tasksservice.cpp  tasksservice.h
